--- a/虚拟机模板配置说明.md
+++ b/虚拟机模板配置说明.md
@@ -158,3 +158,17 @@
   ```
 
   
+- 常用安装
+
+  ```bash
+  1.vim
+  yum install vim -y
+  2.epel-release
+  yum install epel-release -y
+  3.rsync
+  yum install rsync -y
+  4.unzip
+  yum install unzip -y
+  ```
+
+  
